[tool.poetry]
name = "my-library"
version = "0.1.0"
description = ""
authors = ["Luca <luca.convalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "gcp"
url = "https://europe-southwest1-python.pkg.dev/micro-servizi-1-0/micro-servizi-commons"