[tool.poetry]
name = "sample"
version = "0.1.3"
description = ""
authors = ["Luca <luca.convalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[project]
name = "sample"
requires-python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "gcp"
url = "https://europe-southwest1-python.pkg.dev/micro-servizi-1-0/micro-servizi-commons"