[project]
name = "sample"
version = "0.1.7"
authors = [
  { name="GEDI", email="author@example.com" },
]
description = "A common library package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]